--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Logs
 logs
-*.log*
+*.log
 
 # Runtime data
 pids
@@ -29,12 +29,8 @@ node_modules
 #dist folder
 dist
 
-# IDEA/Webstorm project files
+#Webstorm metadata
 .idea
-*.iml
-
-#VSCode metadata
-.vscode
 
 # Mac files
 .DS_Store
